--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@heroui/button": "^2.2.20-beta.3",
+    "@heroui/date-picker": "^2.3.20-beta.3",
+    "@heroui/form": "^2.1.19-beta.3",
+    "@heroui/input": "^2.4.20-beta.3",
     "@heroui/react": "^2.8.0-beta.6",
+    "@heroui/select": "^2.4.20-beta.3",
     "framer-motion": "^12.15.0",
     "next": "15.3.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
