--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroui/input": "^2.4.20-beta.3",
     "@heroui/react": "^2.8.0-beta.6",
     "@heroui/select": "^2.4.20-beta.3",
+    "@prisma/client": "^6.8.2",
     "framer-motion": "^12.15.0",
     "next": "15.3.3",
     "react": "^19.1.0",
