--- a/package.json
+++ b/package.json
@@ -9,21 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@heroui/button": "^2.2.20-beta.3",
     "@heroui/date-picker": "^2.3.20-beta.3",
     "@heroui/form": "^2.1.19-beta.3",
     "@heroui/input": "^2.4.20-beta.3",
     "@heroui/react": "^2.8.0-beta.6",
     "@heroui/select": "^2.4.20-beta.3",
+    "@heroui/tooltip": "^2.2.17-beta.3",
+    "@hookform/resolvers": "^5.0.1",
+    "@internationalized/date": "^3.8.1",
+    "@prisma/client": "^6.5.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^6.0.0",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.15.0",
+    "luxon": "^3.6.1",
+    "midtrans-client": "^1.4.3",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/luxon": "^3.6.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
