add pacakage prisma

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@internationalized/date": "^3.8.1",
     "@prisma/client": "^6.5.0",
+    "prisma": "^6.5.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.4.9",
